[tool.poetry]
name = "china-stock-data"
version = "0.1.7"
description = ""
authors = ["sunjuzhong <129019668+sunjuzhong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
akshare = "^1.15.32"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
test = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

