[tool.poetry]
name = "china_stock_data"
version = "0.2.0"
description = ""
authors = ["sunjuzhong <129019668+sunjuzhong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
akshare = "^1.15.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-jupyter = "^0.24.0"

[tool.poetry.scripts]
test = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

